# DexBuilder

./: .gitmodules  Android.mk  CMakeLists.txt  dex_builder.cc  dex_builder.h  dex_helper.cc  dex_testcase_generator.cc
include/: dex_builder.h  dex_builder.ixx  dex_helper.h  dex_helper.ixx
include/slicer/: dex_format.h  reader.h  writer.h
slicer/: common.cc  dex_bytecode.cc  dex_format.cc  dex_ir.cc  dex_utf8.cc  reader.cc  writer.cc  writer.h
